2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/java.test: `configure' uses a trap, so use `(exit 77);
	exit 77' to portably set the exit status similar to AS_EXIT.
	* tests/fn99.test: propagate nonzero exit status from subshell.

	* tests/mkinst3.test: Fix `mkdir' wrapper to not be confused
	if ``pwd`' contains the string `-p'.  Create the wrapper in a
	subdirectory so that `.' in $PATH does not lead to an endless
	loop.

	* lib/depcomp (ia64hp): Rename dependency style to..
	(hp2): ..this, as it works with aCC on HPPA, too; adjust
	comment.  Report by Olivier Fourdan (PR automake/481).
	* THANKS: Update.

	* tests/aclocal7.test: Add `$sleep's between file touching
	and automake resp aclocal+automake invocations, to ensure
	they complete with a time stamp strictly later than the touched
	file.

	* lib/missing: Remove superfluous quotes.  Replace all uses of
	`[' by `test', for consistency, and for..
	* tests/missing5.test: ..this new test.
	* tests/Makefile.am: Update.

	* lib/missing (sed_minuso, sed_output): New variables.
	(autom4te, help2man, makeinfo): Use them.  Unifies detection of
	`-o FILE', `--output FILE', `--output=FILE', stricter regex.
	Fixes `missing' to detect `--output' for help2man.  Fixes
	PR automake/483.  Report by Dennis J. Linse.
	(autom4te): Document in `missing --help'.
	* THANKS: Update.

2006-04-26  Thien-Thi Nguyen  <ttn@gnu.org>  (tiny change)

	* doc/automake.texi (Dependency Tracking Evolution): Fix typo.

2006-04-25  Stepan Kasal  <kasal@ucw.cz>

	* lib/install-sh: Simplify the expr implementation of dirname.

2006-04-24  Paul Eggert  <eggert@cs.ucla.edu>

	* lib/install-sh: Handle --, and diagnose unknown options.
	* m4/mkdirp.m4 (AM_PROG_MKDIR_P): In the normal case, set
	mkdir_p='mkdir -p', not to 'mkdir -p --', for consistency with
	the other ways that mkdir_p might be set.

2006-04-21  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/amversion.in (_AM_AUTOCONF_VERSION): New macro.