@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2003, 2004  Free Software Foundation, Inc.
+# Copyright (C) 2003, 2004, 2006  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -48,18 +48,18 @@ END
 $ACLOCAL
 $AUTOMAKE -Wno-override
 AUTOMAKE_fails
-grep install-local stderr && exit 1 # There is no such thing as install-local
-grep installcheck-local stderr
-grep html-local stderr
+grep ':.*install-local' stderr && exit 1 # There is no such thing as install-local
+grep ':.*installcheck-local' stderr
+grep ':.*html-local' stderr
 # Make sure overriding *-am targets suggest using *-local, not *-am.
-grep cleam-am-local stderr && exit 1
-grep clean-local stderr
+grep ':.*clean-am-local' stderr && exit 1
+grep ':.*clean-local' stderr
 
 # Conditional overrides ought to be diagnosed, but it can't be done yet.
 # See the FIXME in Automake::Rule::define.  Once this is fixed, the grep below
 # will fail.  If you see the failure, it means you fixed Automake.  Well done!
 # Just strip out the next '&& exit 1' and this comment.
-grep ps stderr && exit 1
+grep ':.*overrides.*ps' stderr && exit 1
 
 # Test for another issue.  Overriding html: should cause only one
 # html: rule to be output.
