@@ -1,5 +1,10 @@
 2006-05-10  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* tests/overrid.test: Change all regexes for warning messages to
+	match after a colon, so that the prepended file names do not
+	cause false matches.  Tighten overrides regex.  Fix typo
+	`cleam-am-local' -> `clean-am-local'.
+
 	* tests/java.test: `configure' uses a trap, so use `(exit 77);
 	exit 77' to portably set the exit status similar to AS_EXIT.
 	* tests/fn99.test: propagate nonzero exit status from subshell.
